added training of single layer neural network with no activation function

--- a/environment.yml
+++ b/environment.yml
@@ -15,6 +15,7 @@ dependencies:
   - sqlalchemy
   - xgboost >= 2.0.3
   - pmdarima >= 2.0
+  - tensorflow
   - pip:
       - cinemagoer
       - lxml
